<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="representative"
            type="com.example.android.politicalpreparedness.screen.representative.model.Representative" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_padding">


        <ImageView
            android:id="@+id/ivAvatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/ic_profile_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:profileImage="@{representative.official.photoUrl}"
            app:srcCompat="@drawable/ic_profile" />

        <TextView
            android:id="@+id/tvTitle"
            style="@style/TextViewNameStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{representative.office.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivAvatar"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvName"
            style="@style/TextViewCommonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{representative.official.name}"
            app:layout_constraintEnd_toStartOf="@+id/wwwIcon"
            app:layout_constraintStart_toEndOf="@+id/ivAvatar"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <TextView
            android:id="@+id/tvParty"
            style="@style/TextViewCommonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{representative.official.party}"
            app:layout_constraintEnd_toStartOf="@+id/wwwIcon"
            app:layout_constraintStart_toEndOf="@+id/ivAvatar"
            app:layout_constraintTop_toBottomOf="@+id/tvName" />

        <ImageView
            android:id="@+id/wwwIcon"
            android:layout_width="@dimen/social_size"
            android:layout_height="@dimen/social_size"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/ic_web_site_description"
            app:layout_constraintEnd_toStartOf="@+id/facebookIcon"
            app:layout_constraintTop_toTopOf="@+id/facebookIcon"
            app:srcCompat="@drawable/ic_www" />

        <ImageView
            android:id="@+id/facebookIcon"
            android:layout_width="@dimen/social_size"
            android:layout_height="@dimen/social_size"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/ic_facebook_description"
            app:layout_constraintEnd_toStartOf="@+id/twitterIcon"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            app:srcCompat="@drawable/ic_facebook" />

        <ImageView
            android:id="@+id/twitterIcon"
            android:layout_width="@dimen/social_size"
            android:layout_height="@dimen/social_size"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/ic_twitter_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/facebookIcon"
            app:srcCompat="@drawable/ic_twitter" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>